# TFG-Vision-RaspberryPi3

./: .gitignore  README.md  fotos.py
calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  calibration.cpp  camera_calibration  cmake_install.cmake  output.yml  output6.8.yml
reconocimiento/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reconocimiento  reconocimiento.cpp
tests/: 12062017_output.ods  CMakeCache.txt  CMakeLists.txt  Captura_imagen  Captura_imagen_rgb  Clouds  Detection  Homography  Makefile  Merge  Optical_flow  Sun  Tracking_cloud  captura_imagenes.cpp  clear.sh  cloud_tracking.cpp  clouds.cpp  cmake_install.cmake  detection.cpp  homography.cpp  merge.cpp  patrones.txt  prueba.txt  temperature.cpp  temperature.h
tests/Arduino/SerialClass/: SerialClass.cpp  SerialClass.h
tests/Arduino/Temperature/: temperature.cpp  temperature.h  temperature.hpp
tests/Arduino/Temperature/temperatura/: temperatura.ino
tests/Capture/: captura_imagenes.cpp
tests/Database/: database.db  database17062017.db  database19062017.db  database_11062017.db  database_12062017.db  database_prueba_rasp.db  database_rasp.db  database_raspberry.db  database_raspberry2.db  database_raspberry3.db
tests/Database/sqlite3/: sqliteCallBack.hpp
tests/Detection/: detection.cpp  utilities.hpp  ventanas.txt
tests/MergeHDR/: merge.cpp
tests/OpticalFlow/: optical_flow.cpp
tests/RealTime/: realtime.cpp
tests/SerialClass/: SerialClass.cpp  SerialClass.h
tests/Sun/: sun.cpp
tests/Ventanas/: ventana.cpp
